<resources>
    <string name="app_name">Топ позика до зарплати</string>
    <string name="get_credit">Отримати гроші</string>
    <string name="error">Возникла ошибка. Проверьте подключение к интернету или попробуйте позже</string>
    <string name="policy">Інформація про наші послуги</string>
    <string name="clear">Понятно</string>
    <string name="day1">день</string>
    <string name="day2_4">днiв</string>
    <string name="day5_more">днiв</string>
    <string name="verified">Надежный</string>
    <string name="curr">грн</string>
    <string name="first_credit">перший кредит</string>
    <string name="repeated">повторний</string>
    <string name="days_amount">термiн</string>
    <string name="metrika_app_id">497d4d81-615a-404c-b9f2-3b09cf30f029</string>
    <string name="aff_id">17294</string>
    <string name="show_details"><u>Детальніше</u></string>
    <string name="rates_from">ставка вiд</string>
</resources>