<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/proposition_item_radius"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/proposition_item_bg"
            android:orientation="vertical"
            android:padding="@dimen/proposition_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <RatingBar
                        android:id="@+id/rbRating"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:max="5"
                        android:numStars="5"
                        android:theme="@style/RatingBar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/PropositionInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/t1"
                                style="@style/PropositionInfoText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@string/first_credit"
                                android:textColor="@color/text_gray11"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform" />

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/tvInfoFirst"
                                style="@style/PropositionInfoTextDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textSize="14sp"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="10sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform"
                                tools:text="10000 uah" />

                            <TextView
                                style="@style/PropositionInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/curr" />

                        </LinearLayout>

                        <LinearLayout
                            style="@style/PropositionInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/t2"
                                style="@style/PropositionInfoText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/repeated"
                                android:textColor="@color/text_gray22"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform" />

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/tvInfoRepeat"
                                style="@style/PropositionInfoTextDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textSize="14sp"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="10sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform"
                                tools:text="100000" />

                            <TextView
                                style="@style/PropositionInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/curr" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <LinearLayout
                            style="@style/PropositionInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/t3"
                                style="@style/PropositionInfoText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@string/rates_from"
                                android:textColor="@color/text_gray11"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform" />

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/tvInfoRates"
                                style="@style/PropositionInfoTextDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textSize="14sp"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="10sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform"
                                tools:text="0.01%" />

                            <TextView
                                style="@style/PropositionInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/curr" />

                        </LinearLayout>

                        <LinearLayout
                            style="@style/PropositionInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/t4"
                                style="@style/PropositionInfoText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@string/days_amount"
                                android:textColor="@color/text_gray22"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform" />

                            <com.app.hroshidozarplatni.utils.SizeAwareTextView
                                android:id="@+id/tvInfoDays"
                                style="@style/PropositionInfoTextDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textSize="14sp"
                                app:autoSizeMaxTextSize="14sp"
                                app:autoSizeMinTextSize="10sp"
                                app:autoSizeStepGranularity="1sp"
                                app:autoSizeTextType="uniform"
                                tools:text="1-30" />

                            <TextView
                                android:id="@+id/tvInfoTxtDays"
                                style="@style/PropositionInfoText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="days" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnApply"
                        style="@style/ClickButton"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_marginTop="6dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeStepGranularity="1sp"
                        app:autoSizeTextType="uniform" />

                </LinearLayout>
            </LinearLayout>

            <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="0">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    android:textSize="@dimen/text_size_info"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:visibility="visible" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                android:id="@+id/btnDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/show_details"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_info"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/proposition_badge_bg"
        android:elevation="2dp"
        android:gravity="center"
        android:lines="1"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:text="@string/verified"
        android:textColor="@android:color/white"
        app:autoSizeMaxTextSize="@dimen/text_size_mid"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>